# Quant-Enthusiasts-Risk-Engine

./: README.md
Docs/: development_guide.md
cpp_engine/: CMakeLists.txt
cpp_engine/libraries/qe_risk_engine/src/: RiskEngine.cpp
cpp_engine/tests/src/: test_risk_engine.cpp
python_api/: app.py  requirements.txt
react_dashboard/: .env.production
